# godot-gravityfield

./: Cargo.toml  README.md
src/: gravity.rs  lib.rs
src/gravity/: axis.rs  build_trs.rs  field.rs  query.rs  util.rs
src/gravity/field/: axial3d.rs  bridge3d.rs  center.rs  conic3d.rs  flat.rs  shaped.rs
src/gravity/field/shaped/: cuboid.rs  curve.rs  ring3d.rs
